--- a/volume-letsencrypt.yaml
+++ b/volume-letsencrypt.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: volume_letsencript
+  name: volume-letsencript
   labels:
     type: local
 spec:
