--- a/popote/deployment-monopod.yaml
+++ b/popote/deployment-monopod.yaml
@@ -17,21 +17,49 @@ spec:
       containers:
       - name: popote-mariadb
         image: popote_vuejs_k8s-mariadb
+        resources:
+          requests:
+            memory: "64Mi"
+            cpu: "250m"
+          limits:
+            memory: "128Mi"
+            cpu: "500m"
         ports:
           - containerPort: 3306
           
       - name: popote-backend
         image: popote_vuejs_k8s-backend
+        resources:
+          requests:
+            memory: "64Mi"
+            cpu: "250m"
+          limits:
+            memory: "128Mi"
+            cpu: "500m"
         ports:
           - containerPort: 3000
       
       - name: popote-frontend
         image: popote_vuejs_k8s-frontend
+        resources:
+          requests:
+            memory: "64Mi"
+            cpu: "250m"
+          limits:
+            memory: "128Mi"
+            cpu: "500m"
         ports:
           - containerPort: 8080
       
       - name: popote-nginx
         image: popote_vuejs_k8s-nginx
+        resources:
+          requests:
+            memory: "64Mi"
+            cpu: "250m"
+          limits:
+            memory: "128Mi"
+            cpu: "500m"
         ports:
           - containerPort: 80
           - containerPort: 443
