--- a/popote/deployment-monopod.yaml
+++ b/popote/deployment-monopod.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: popote-mariadb
-        image: popote_vuejs_k8s-mariadb
+        image: popote_vuejs_k8s-mariadb:latest
         resources:
           requests:
             memory: "64Mi"
@@ -28,7 +28,7 @@ spec:
           - containerPort: 3306
           
       - name: popote-backend
-        image: popote_vuejs_k8s-backend
+        image: popote_vuejs_k8s-backend:latest
         resources:
           requests:
             memory: "64Mi"
@@ -40,7 +40,7 @@ spec:
           - containerPort: 3000
       
       - name: popote-frontend
-        image: popote_vuejs_k8s-frontend
+        image: popote_vuejs_k8s-frontend:latest
         resources:
           requests:
             memory: "64Mi"
@@ -52,7 +52,7 @@ spec:
           - containerPort: 8080
       
       - name: popote-nginx
-        image: popote_vuejs_k8s-nginx
+        image: popote_vuejs_k8s-nginx:latest
         resources:
           requests:
             memory: "64Mi"
