--- a/popote/deployment-monopod.yaml
+++ b/popote/deployment-monopod.yaml
@@ -40,7 +40,7 @@ spec:
           - containerPort: 3000
       
       - name: popote-frontend
-        image: popote_vuejs_k8s-frontend:latest
+        image: K8Smaster.local/popote_vuejs_k8s-frontend:latest
         resources:
           requests:
             memory: "64Mi"
