--- a/popote/deployment-monopod.yaml
+++ b/popote/deployment-monopod.yaml
@@ -15,41 +15,41 @@ spec:
         app: deployment-popote-monopod
     spec:
       containers:
-      - name: popote-mariadb
-        image: popote_vuejs_k8s-mariadb:latest
-        resources:
-          requests:
-            memory: "64Mi"
-            cpu: "250m"
-          limits:
-            memory: "128Mi"
-            cpu: "500m"
-        ports:
-          - containerPort: 3306
+      # - name: popote-mariadb
+      #   image: popote_vuejs_k8s-mariadb:latest
+      #   resources:
+      #     requests:
+      #       memory: "64Mi"
+      #       cpu: "250m"
+      #     limits:
+      #       memory: "128Mi"
+      #       cpu: "500m"
+      #   ports:
+      #     - containerPort: 3306
           
-      - name: popote-backend
-        image: popote_vuejs_k8s-backend:latest
-        resources:
-          requests:
-            memory: "64Mi"
-            cpu: "250m"
-          limits:
-            memory: "128Mi"
-            cpu: "500m"
-        ports:
-          - containerPort: 3000
+      # - name: popote-backend
+      #   image: popote_vuejs_k8s-backend:latest
+      #   resources:
+      #     requests:
+      #       memory: "64Mi"
+      #       cpu: "250m"
+      #     limits:
+      #       memory: "128Mi"
+      #       cpu: "500m"
+      #   ports:
+      #     - containerPort: 3000
       
-      - name: popote-frontend
-        image: localhost/popote_vuejs_k8s-frontend:latest
-        resources:
-          requests:
-            memory: "64Mi"
-            cpu: "250m"
-          limits:
-            memory: "128Mi"
-            cpu: "500m"
-        ports:
-          - containerPort: 8080
+      # - name: popote-frontend
+      #   image: localhost/popote_vuejs_k8s-frontend:latest
+      #   resources:
+      #     requests:
+      #       memory: "64Mi"
+      #       cpu: "250m"
+      #     limits:
+      #       memory: "128Mi"
+      #       cpu: "500m"
+      #   ports:
+      #     - containerPort: 8080
       
       - name: popote-nginx
         image: registry.k8s.io/popote/popote_vuejs_k8s-nginx
