--- a/popote/deployment-multipods/deployment-nginx.yaml
+++ b/popote/deployment-multipods/deployment-nginx.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: deployment-nginx
     spec:
+      containers:
       - name: popote-nginx
         #image: fbruno/popote_vuejs_k8s-tags-10-nginx 
         image: fbruno/popote_vuejs_k8s-tags-11-nginx 
@@ -28,4 +29,4 @@ spec:
           - containerPort: 80
           - containerPort: 443
 
-    restartPolicy: Always
+      restartPolicy: Always
