update build popote multipods

--- a/popote/deployment-multipods/deployment-nginx.yaml
+++ b/popote/deployment-multipods/deployment-nginx.yaml
@@ -17,16 +17,11 @@ spec:
       containers:
       - name: popote-nginx
         #image: fbruno/popote_vuejs_k8s-tags-10-nginx 
-        image: fbruno/popote_vuejs_k8s-tags-11-nginx 
+        image: fbruno/popote_vuejs_k8s-tags-12-nginx 
         resources:
-          requests:
-            memory: "64Mi"
-            cpu: "250m"
-          limits:
-            memory: "128Mi"
-            cpu: "500m"
         ports:
           - containerPort: 80
           - containerPort: 443
+          - containerPort: 3000
 
       restartPolicy: Always
