--- a/popote/deployment-multipods/deployment-backend.yaml
+++ b/popote/deployment-multipods/deployment-backend.yaml
@@ -17,15 +17,10 @@ spec:
       containers:
       - name: popote-backend
         #image: fbruno/popote_vuejs_k8s-tags-10-backend:latest
-        image: fbruno/popote_vuejs_k8s-tags-11-backend:latest
+        image: fbruno/popote_vuejs_k8s-tags-12-backend:latest
         resources:
-          requests:
-            memory: "64Mi"
-            cpu: "250m"
-          limits:
-            memory: "128Mi"
-            cpu: "500m"
         ports:
           - containerPort: 3000
+            name: backend-port
 
       restartPolicy: Always
