update build popote multipods

--- a/popote/deployment-multipods/deployment-backend.yaml
+++ b/popote/deployment-multipods/deployment-backend.yaml
@@ -21,6 +21,6 @@ spec:
         resources:
         ports:
           - containerPort: 3000
-            name: backend-port
+            name: backend-svc
 
       restartPolicy: Always
