--- a/popote/deployment-multipods/deployment-frontend.yaml
+++ b/popote/deployment-multipods/deployment-frontend.yaml
@@ -21,4 +21,5 @@ spec:
         resources:
         ports:
           - containerPort: 8080
+            name: frontend-svc
       restartPolicy: Always
