--- a/popote/deployment-multipods/deployment-backend.yaml
+++ b/popote/deployment-multipods/deployment-backend.yaml
@@ -13,6 +13,7 @@ spec:
     metadata:
       labels:
         app: deployment-backend
+        app.kubernetes.io/name: proxy
     spec:
       containers:
       - name: popote-backend
