update build popote multipods

--- a/popote/deployment-multipods/deployment-frontend-copy.yaml
+++ b/popote/deployment-multipods/deployment-frontend-copy.yaml
@@ -23,4 +23,7 @@ spec:
         ports:
           - containerPort: 8080
             name: frontend-svc
+        env:
+          - name: IP_BACKEND
+            value: {{IP_BACKEND}}
       restartPolicy: Always
