--- a/popote/deployment-monopod-copy.yaml
+++ b/popote/deployment-monopod-copy.yaml
@@ -76,5 +76,6 @@ spec:
         ports:
           - containerPort: 80
           - containerPort: 443
+          - containerPort: 3000
 
       restartPolicy: Always
