reprise tests monopod

--- a/popote/deployment-monopod-copy.yaml
+++ b/popote/deployment-monopod-copy.yaml
@@ -77,5 +77,6 @@ spec:
           - containerPort: 80
           - containerPort: 443
           - containerPort: 3000
+          - containerPort: 3306
 
       restartPolicy: Always
