--- a/popote/popote-service.yaml
+++ b/popote/popote-service.yaml
@@ -7,7 +7,7 @@ metadata:
   namespace: popote
 spec:
   selector:
-    app: popote
+    app: deployment-popote-monopod
   ports:
   - protocol: TCP
     port: 80
