reprise tests monopod

--- a/popote/deployment-monopod-copy.yaml
+++ b/popote/deployment-monopod-copy.yaml
@@ -64,7 +64,7 @@ spec:
             cpu: "500m"
         ports:
           - containerPort: 8080
-            name: http-port
+            name: http1-port
       
       - name: popote-nginx
         #image: fbruno/popote_vuejs_k8s-tags-10-nginx 
