--- a/popote/popote-service.yaml
+++ b/popote/popote-service.yaml
@@ -11,6 +11,9 @@ spec:
   ports:
   - name: http-port
     port: 80
+    targetPort: 80
+  - name: http1-port
+    port: 8080
     targetPort: 8080
   - name: https-port
     port: 443
