--- a/popote/deployment-monopod-copy.yaml
+++ b/popote/deployment-monopod-copy.yaml
@@ -70,7 +70,7 @@ spec:
             name: http1-port
         env:
           - name: IP_BACKEND
-            value: "http://127.0.0.1:3000"
+            value: "http://127.0.0.1/api"
       
       - name: popote-nginx
         #image: fbruno/popote_vuejs_k8s-tags-10-nginx 
