--- a/popote/popote-service.yaml
+++ b/popote/popote-service.yaml
@@ -12,14 +12,14 @@ spec:
   - name: http-port
     port: 80
     targetPort: 80
-  - name: http1-port
-    port: 8080
-    targetPort: 8080
-  - name: https-port
-    port: 443
-    targetPort: 443
-  - name: backend-port
-    port: 3000
+  # - name: http1-port
+  #   port: 8080
+  #   targetPort: 8080
+  # - name: https-port
+  #   port: 443
+  #   targetPort: 443
+  # - name: backend-port
+  #   port: 3000
     targetPort: 3000
   - name: mariadb-port
     port: 3306
