--- a/popote/ingress.yaml
+++ b/popote/ingress.yaml
@@ -1,7 +1,8 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: ingress-k8sbfr
+  name: ingress-popote
+  namespace: popote
 spec:
   rules:
   # - host: "k8sbfr.zapto.org"
