--- a/popote/popote-service.yaml
+++ b/popote/popote-service.yaml
@@ -9,6 +9,8 @@ spec:
   selector:
     app: deployment-popote-monopod
   type: LoadBalancer
+  externalIPs:
+  - 192.168.1.34
   ports:
   - name: http-port
     port: 8080
