--- a/master-nginx/mster-ingress.yaml
+++ b/master-nginx/mster-ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: ingress-popote
+  name: master-ingress
   namespace: popote
 spec:
   ingressClassName: nginx
@@ -10,7 +10,7 @@ spec:
     http:
       paths:
       - pathType: Prefix
-        path: "/"
+        path: "/popote"
         backend:
           service:
             name: popote-service
