--- a/master-nginx/master-ingress.yaml
+++ b/master-nginx/master-ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: master-ingress
-  namespace: popote
+  namespace: master-ingress
 spec:
   ingressClassName: nginx
   rules:
