--- a/master-nginx/master-ingress.yaml
+++ b/master-nginx/master-ingress.yaml
@@ -15,4 +15,4 @@ spec:
           service:
             name: popote-service
             port:
-              name: popote-http-port
+              name: popote-http
