--- a/popote/popote-service.yaml
+++ b/popote/popote-service.yaml
@@ -12,7 +12,7 @@ spec:
   # externalIPs:
   # - 192.168.1.17
   ports:
-  - name: popote-http-port
+  - name: popote-http
     port: 8080
     targetPort: 80
   
