--- a/master-nginx/master-ingress.yaml
+++ b/master-nginx/master-ingress.yaml
@@ -13,6 +13,6 @@ spec:
         path: "/popote"
         backend:
           service:
-            name: popote/popote-service
+            name: popote-service
             port:
               name: popote-http
