--- a/popote/popote-service.yaml
+++ b/popote/popote-service.yaml
@@ -8,6 +8,7 @@ metadata:
 spec:
   selector:
     app: deployment-popote-monopod
+  type: NodePort
   # type: LoadBalancer
   # externalIPs:
   # - 192.168.1.17
