--- a/popote/popote-ingress.yaml
+++ b/popote/popote-ingress.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: "k8sbfr.zapto.org/popote"
+  - host: "k8sbfr.zapto.org"
     http:
       paths:
       - pathType: Prefix
