--- a/master-nginx/master-ingress.yaml
+++ b/master-nginx/master-ingress.yaml
@@ -15,4 +15,5 @@ spec:
         backend:
           service:
             name: popote-service
-            port: popote-http
+            port: 
+              number: popote-http
