--- a/popote/popote-service.yaml
+++ b/popote/popote-service.yaml
@@ -8,7 +8,8 @@ metadata:
 spec:
   selector:
     app: deployment-popote-monopod
-  type: NodePort
+  # type: NodePort
+  type: ClusterIP
   # type: LoadBalancer
   # externalIPs:
   # - 192.168.1.17
