--- a/master-nginx/master-ingress.yaml
+++ b/master-nginx/master-ingress.yaml
@@ -15,6 +15,7 @@ spec:
         backend:
           namespace: popote 
           service:
+            namespace: popote 
             name: popote-service
             port: 
               number: 8080
