--- a/master-nginx/master-ingress.yaml
+++ b/master-nginx/master-ingress.yaml
@@ -13,7 +13,8 @@ spec:
       - path: /popote
         pathType: Prefix
         backend:
+          nameSpace: popote
           service:
-            name: popote-service.popote
+            name: popote-service
             port: 
               number: 8080
