--- a/popote/popote-service.yaml
+++ b/popote/popote-service.yaml
@@ -6,6 +6,7 @@ metadata:
     app: deployment-popote-monopod
   namespace: popote
 spec:
+  dnsPolicy: default
   selector:
     app: deployment-popote-monopod
   # type: NodePort
