--- a/popote/popote-service.yaml
+++ b/popote/popote-service.yaml
@@ -6,7 +6,7 @@ metadata:
     app: deployment-popote-monopod
   namespace: popote
 spec:
-  dnsPolicy: default
+  hostname: popote-service
   selector:
     app: deployment-popote-monopod
   # type: NodePort
