--- a/popote/popote-ingress.yaml
+++ b/popote/popote-ingress.yaml
@@ -10,7 +10,7 @@ spec:
     http:
       paths:
       - pathType: Prefix
-        path: "/"
+        path: "/popote"
         backend:
           service:
             name: popote-service
