--- a/popote/popote-service.yaml
+++ b/popote/popote-service.yaml
@@ -9,10 +9,10 @@ spec:
   selector:
     app: deployment-popote-monopod
   # type: NodePort
-  type: ClusterIP
-  # type: LoadBalancer
-  # externalIPs:
-  # - 192.168.1.17
+  # type: ClusterIP
+  type: LoadBalancer
+  externalIPs:
+  - 192.168.1.17
   ports:
   - name: popote-http
     port: 8080
