--- a/popote/popote-ingress.yaml
+++ b/popote/popote-ingress.yaml
@@ -15,4 +15,4 @@ spec:
           service:
             name: popote-service
             port:
-              number: 8080
+              number: popote-http
