--- a/master-nginx/master-ingress.yaml
+++ b/master-nginx/master-ingress.yaml
@@ -14,6 +14,6 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: popote-service.popote.svc.cluster.local
+            name: popote-svc
             port: 
               number: 8080
