restore acces direct popote

--- a/popote/popote-service.yaml
+++ b/popote/popote-service.yaml
@@ -8,11 +8,11 @@ metadata:
 spec:
   selector:
     app: deployment-popote-monopod
-  type: NodePort
+  # type: NodePort
   # type: ClusterIP
-  # type: LoadBalancer
-  # externalIPs:
-  # - 192.168.1.17
+  type: LoadBalancer
+  externalIPs:
+  - 192.168.1.17
   ports:
   - name: popote-http
     port: 8080
