--- a/install-ingress-nginx/ingress-k8sbfr.yaml
+++ b/install-ingress-nginx/ingress-k8sbfr.yaml
@@ -15,7 +15,7 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: popote/popote-service
+            name: popote-service
             port:
               number: 8080
       - path: /(.*)
