test version 3 install ingress

--- a/ingress-v3/nginx-secure-app.yaml
+++ b/ingress-v3/nginx-secure-app.yaml
@@ -40,7 +40,7 @@ spec:
           name: nginxconfigmap
       containers:
       - name: nginxhttps
-        image: bprashanth/nginxhttps
+        image: soltest4hpvsop/nginxhttps
         ports:
         - containerPort: 443
         - containerPort: 80
