--- a/ingress-v3/k8sbfr-nginxsecrets.yaml
+++ b/ingress-v3/k8sbfr-nginxsecrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: "v1"
 kind: "Secret"
 metadata:
-  name: "nginxsecret"
+  name: "k8sbfr-nginxsecret"
   namespace: "default"
 type: kubernetes.io/tls
 data:
