--- a/ingress-v3/k8sbfr-loadBalancer-service.yaml
+++ b/ingress-v3/k8sbfr-loadBalancer-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: loadbalancer-service
+  name: k8sbfr-loadbalancer-service
 spec:
   selector:
     app: k8sbfr-app
