--- a/ingress-v3/k8sbfr-nginx-svc.yaml
+++ b/ingress-v3/k8sbfr-nginx-svc.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: bfrk8s-nginx
+  name: k8sbfr-nginx
   labels:
-    run: bfrk8s-nginx
+    run: k8sbfr-nginx
 spec:
   ports:
   - port: 80
     protocol: TCP
   selector:
-    run: bfrk8s-nginx
+    run: k8sbfr-nginx
