--- a/k8sbfr-my-ingress/ingress.yaml
+++ b/k8sbfr-my-ingress/ingress.yaml
@@ -14,6 +14,7 @@ spec:
                 name: k8sbfr-hello-node
                 port:
                   number: 8080
+              namespace: k8sbfr-hello-node
           - path: /popote
             pathType: Prefix
             backend:
@@ -21,3 +22,4 @@ spec:
                 name: deployment-popote-monopod
                 port:
                   number: 80
+              namespace: popote
