--- a/k8sbfr-hello-node/ingress-hello-node.yaml
+++ b/k8sbfr-hello-node/ingress-hello-node.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: k8sbfr-ingress-hello-node
+  namespace: k8sbfr-hello-node
 spec:
   rules:
     - host: k8sbfr.zapto.org
