--- a/k8sbfr-my-ingress/k8sbfr-my-ingress.yaml
+++ b/k8sbfr-my-ingress/k8sbfr-my-ingress.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: k8sbfr-my-ingress
+  namespace: k8sbfr-my-ingress
 spec:
   rules:
     - host: k8sbfr.zapto.org
