update ingress k8sbfr-my-ingress

--- a/k8sbfr-my-ingress/k8sbfr-my-ingress.yaml
+++ b/k8sbfr-my-ingress/k8sbfr-my-ingress.yaml
@@ -8,7 +8,7 @@ spec:
     - host: k8sbfr.zapto.org
       http:
         paths:
-          - path: /hello
+          - path: /
             pathType: Prefix
             backend:
               service:
