--- a/k8sbfr-my-ingress/deploy-k8sbfr-ingress-controleur.yaml
+++ b/k8sbfr-my-ingress/deploy-k8sbfr-ingress-controleur.yaml
@@ -627,7 +627,7 @@ metadata:
     app.kubernetes.io/version: 1.11.2
   name: nginx
 spec:
-  controller: k8s.io/k8sbfr-my-ingress
+  controller: k8s.io/ingress-nginx
 ---
 apiVersion: admissionregistration.k8s.io/v1
 kind: ValidatingWebhookConfiguration
