--- a/k8sbfr-my-ingress/k8sbfr-my-ingress.yaml
+++ b/k8sbfr-my-ingress/k8sbfr-my-ingress.yaml
@@ -1,7 +1,8 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: k8sbfr-my-ingress
+  #name: k8sbfr-my-ingress
+  #name: ingress-nginx
   namespace: ingress-nginx
 spec:
   rules:
@@ -22,5 +23,5 @@ spec:
               service:
                 name: deployment-popote-monopod
                 port:
-                  number: 80
+                  number: 8080
               #namespace: popote
