--- a/k8sbfr-hello-node/svc-hello-node.yaml
+++ b/k8sbfr-hello-node/svc-hello-node.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: k8sbfr-hello-node
-  namespace: k8sbfr-hello-node
+  #namespace: k8sbfr-hello-node
 spec:
   selector:
     app: k8sbfr-hello-node
