--- a/k8sbfr-hello-node/ingress-hello-node.yaml
+++ b/k8sbfr-hello-node/ingress-hello-node.yaml
@@ -3,6 +3,7 @@ kind: Ingress
 metadata:
   name: k8sbfr-ingress-hello-node
   namespace: k8sbfr-hello-node
+  port: 80
 spec:
   rules:
     - host: k8sbfr.zapto.org
