update ingress k8sbfr-my-ingress

--- a/k8sbfr-hello-node/ingress-hello-node.yaml
+++ b/k8sbfr-hello-node/ingress-hello-node.yaml
@@ -7,13 +7,11 @@ spec:
   rules:
     - host: k8sbfr.zapto.org
       http:
+        port: 8080
         paths:
           - path: /hello
             pathType: Prefix
             backend:
               service:
                 name: k8sbfr-hello-node
-                port:
-                  number: 8080
-        port: 
-          number: 8080
+                port: 8080
