--- a/k8sbfr-hello-node/ingress-hello-node.yaml
+++ b/k8sbfr-hello-node/ingress-hello-node.yaml
@@ -9,7 +9,8 @@ spec:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
   ports:
-    - port: 80
+    - port: 8080
+      targetPort: http
   rules:
     - host: k8sbfr.zapto.org
       http:
