--- a/k8sbfr-hello-node/ingress-hello-node.yaml
+++ b/k8sbfr-hello-node/ingress-hello-node.yaml
@@ -4,6 +4,7 @@ metadata:
   name: k8sbfr-ingress-hello-node
   namespace: k8sbfr-hello-node
 spec:
+  externalTrafficPolicy: Local
   type: LoadBalancer
   selector:
     app.kubernetes.io/name: ingress-nginx
