--- a/k8sbfr-hello-node/ingress-hello-node.yaml
+++ b/k8sbfr-hello-node/ingress-hello-node.yaml
@@ -6,19 +6,19 @@ metadata:
 spec:
   externalTrafficPolicy: Local
   type: LoadBalancer
-  selector:
-    app.kubernetes.io/name: ingress-nginx
-    app.kubernetes.io/part-of: ingress-nginx
+  # selector:
+  #   app.kubernetes.io/name: ingress-nginx
+  #   app.kubernetes.io/part-of: ingress-nginx
   ports:
     - port: 8080
       targetPort: http
-  rules:
-    - host: k8sbfr.zapto.org
-      http:
-        paths:
-          - path: /hello
-            pathType: Prefix
-            backend:
-              service:
-                name: k8sbfr-hello-node
-                port: 8080
+  # rules:
+  #   - host: k8sbfr.zapto.org
+  #     http:
+  #       paths:
+  #         - path: /hello
+  #           pathType: Prefix
+  #           backend:
+  #             service:
+  #               name: k8sbfr-hello-node
+  #               port: 8080
