update ingress k8sbfr-my-ingress

--- a/k8sbfr-hello-node/svc-hello-node.yaml
+++ b/k8sbfr-hello-node/svc-hello-node.yaml
@@ -4,6 +4,8 @@ metadata:
   name: k8sbfr-hello-node
   namespace: k8sbfr-hello-node
 spec:
+  externalTrafficPolicy: Local
+  type: LoadBalancer
   selector:
     app: k8sbfr-hello-node
   ports:
